--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 SECRET_KEY=your-secure-random-key-here
 FLASK_DEBUG=false
+REPO_URL=https://github.com/israice/ToDo-Game.git
+WEBHOOK_SECRET=your-secure-random-key-here
+PORT=5010
+BRANCH=master
