--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
+# Flask Server
 SECRET_KEY=your-secure-random-key-here
 FLASK_DEBUG=false
+PORT=5010
+
+# Git Auto-deploy (optional)
 REPO_URL=https://github.com/israice/ToDo-Game.git
 WEBHOOK_SECRET=your-secure-random-key-here
-PORT=5010
 BRANCH=master
+
+# Telegram Bot (optional)
+TELEGRAM_BOT_TOKEN=your_bot_token_from_botfather
+ADMIN_TELEGRAM_ID=123456789
+API_URL=http://localhost:5010
