--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - "${PORT}:5000"
     volumes:
-      - app_data:/app
+      - app_data:/app/data
+      - pip_cache:/root/.cache/pip
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - REPO_URL=${REPO_URL}
@@ -15,6 +16,12 @@ services:
       - SECRET_KEY=${SECRET_KEY}
       - FLASK_DEBUG=${FLASK_DEBUG:-false}
       - DOCKER_API_VERSION=1.44
+    healthcheck:
+      test: ["CMD", "curl", "-fsSL", "http://localhost:5000/.well-known/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
     entrypoint: ["/bin/sh", "-c", "if [ -z \"$REPO_URL\" ]; then echo 'ERROR: REPO_URL is not set. Create .env file with REPO_URL=https://github.com/username/repo.git' && exit 1; fi; BRANCH=${BRANCH:-master}; echo '🔄 Fetching latest code...'; if [ -d /app/.git ]; then cd /app && git fetch origin && git reset --hard origin/$BRANCH && echo '✓ Code updated'; else rm -rf /app/* /app/.[!.]* 2>/dev/null; git clone --branch $BRANCH --single-branch $REPO_URL /app && echo '✓ Code cloned'; fi && echo '📦 Installing dependencies...' && pip install --no-cache-dir -r requirements.txt 2>/dev/null && echo '✓ Dependencies installed' && echo '🚀 Starting server...' && exec gunicorn --bind 0.0.0.0:5000 --workers 2 --worker-class eventlet server:app"]
 
   telegram-bot:
@@ -24,15 +31,19 @@ services:
       context: ./telegram
       dockerfile: Dockerfile
     volumes:
-      - bot_data:/app
+      - bot_data:/app/data
+      - node_modules:/app/node_modules
     environment:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - API_URL=http://web:5000
       - ADMIN_TELEGRAM_ID=${ADMIN_TELEGRAM_ID}
     depends_on:
-      - web
+      web:
+        condition: service_healthy
     entrypoint: ["/bin/sh", "-c", "npm install && node run.js"]
 
 volumes:
   app_data:
   bot_data:
+  pip_cache:
+  node_modules:
